--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="skill-item">Angular</div>
           </div>
           <div class="resume">
-            <a href="usama-game3 intern-resume.pdf" target="_blank" class="btn more-info-btn">Download
+            <a href="usama 3laa Abu-Gamea - Front End Developer.pdf" target="_blank" class="btn more-info-btn">Download
               CV</a>
 
           </div>
