--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <img src="img/profile-img.jpg" alt="profile-img">
           <h1>Hey , my name is <span>Usama Abu-Gamea</span> </h1>
           <p>I'm a <span>frontend developer</span>in living Tanta-Egypt, I make web applications using <span>html</span>
-            , <span>css</span> , <span>javascript</span> and
-            <span>bootstrap</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
+            , <span>css</span> , <span>typescript</span> and
+            <span>angular</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
               page</a>. Want to talk about a project? You can get in touch with me.
             <a href="#contact" class="link-item">here</a> </p>
           <h2>resuming skills </h2>
@@ -89,7 +89,8 @@
             <div class="skill-item">Angular</div>
           </div>
           <div class="resume">
-            <a href="usama 3laa Abu-Gamea - Front End Developer.pdf" target="_blank" class="btn more-info-btn">Download
+            <a href="Usama Alaa Gamea - Front End Developer(Angular) Resume.pdf" target="_blank"
+              class="btn more-info-btn">Download
               CV</a>
 
           </div>
@@ -115,10 +116,10 @@
         <div class="portfolio-filter">
           <button type="button" title="Show All Works" class="portfolio-filter-btn active"
             data-filter="all">all</button>
-          <button type="button" title="Filter by Front-End" class="portfolio-filter-btn"
-            data-filter="front-end">front-end</button>
-          <button type="button" title="Filter by Back-End" class="portfolio-filter-btn"
-            data-filter="back-end">back-end</button>
+          <button type="button" title="Filter by Front-End" class="portfolio-filter-btn" data-filter="front-end">Vanilla
+            JS</button>
+          <button type="button" title="Filter by angular" class="portfolio-filter-btn"
+            data-filter="angular">Angular</button>
           <button type="button" title="Filter by Bootstrap" class="portfolio-filter-btn "
             data-filter="bootstrap">bootstrap</button>
         </div>
@@ -128,7 +129,7 @@
       </div>
       <div class="row portfolio-items">
         <!-- portfolio item start -->
-        <div class="portfolio-item" data-category="front-end">
+        <!-- <div class="portfolio-item" data-category="front-end">
           <div class="portfolio-item-thumbnail">
             <img src="img/portfolio/1.jpg" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
@@ -149,79 +150,79 @@
               <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- portfolio item end -->
 
         <!-- portfolio item start -->
-        <div class="portfolio-item" data-category="front-end,bootstrap">
+        <div class="portfolio-item" data-category="angular">
           <div class="portfolio-item-thumbnail">
-            <img src="img/portfolio/2.jpg" alt="thumbnail">
+            <img src="img/portfolio/2.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">personal portfolio website</h3>
+          <h3 class="portfolio-item-title">healthy website careering</h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                GoCare is dedicated to compassionate crowdfunding, providing easy online fundraising and support for
+                humanitarian causes.
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span></span></p>
-              <p>Technologies - <span>Bootstrap 5</span></p>
+              <p>Technologies - <span>Angular +2</span> - <span>Metronic</span> </p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>View Online - <span><a href="https://www.go-care.com/#/auth/landing-page" target="_blank">Go
+                    Care</a></span></p>
             </div>
           </div>
         </div>
         <!-- portfolio item end -->
-
         <!-- portfolio item start -->
-        <div class="portfolio-item" data-category="back-end">
+        <div class="portfolio-item" data-category="angular">
           <div class="portfolio-item-thumbnail">
-            <img src="img/portfolio/3.jpg" alt="thumbnail">
+            <img src="img/portfolio/7.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">back-end project title</h3>
+          <h3 class="portfolio-item-title">Rajhi Steel Portal</h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                One of Mohammed Abdul Aziz Al-Rajhi & Sons companies, formed various factories specialized in producing
+                different types of steel products.
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span></span></p>
-              <p>Technologies - <span>Html, Nodejs</span></p>
-              <p>Role - <span>Back-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
-            </div>
-          </div>
-        </div>
-        <!-- portfolio item end -->
-
-        <!-- portfolio item start -->
-        <div class="portfolio-item" data-category="front-end">
-          <div class="portfolio-item-thumbnail">
-            <img src="img/portfolio/4.jpg" alt="thumbnail">
-            <button type="button" class="btn more-info-btn">more info</button>
-          </div>
-          <h3 class="portfolio-item-title">app landing pages</h3>
-          <div class="portfolio-item-details">
-            <div class="description">
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
-              </p>
-            </div>
-            <div class="general-info">
-              <p>Created - <span></span></p>
-              <p>Technologies - <span>Html, Css , Bootstrap </span></p>
+              <p>Technologies - <span>Html, SCSS , Bootstrap , Angular +2</span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>View Online - <span><a href="#" target="_blank">Rajhi
+                    Steel</a></span></p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
+
+
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="angular">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/4.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">RaJhi Steel Customer Portal </h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                One of Mohammed Abdul Aziz Al-Rajhi & Sons companies, formed various factories specialized in producing
+                different types of steel products.
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span></span></p>
+              <p>Technologies - <span>Html, SCSS , Bootstrap , Angular , Typescript </span></p>
+              <p>Role - <span>Front-End</span></p>
+              <p>View Online - <span><a href="https://rajhicustomer.azurewebsites.net/" target="_blank">Customer
+                    Portal</a></span></p>
             </div>
           </div>
         </div>
@@ -237,16 +238,16 @@
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                Restaurants Guide - latest Restaurants reviews, features and up to date information.
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span></span></p>
               <p>Technologies - <span>Html, Css , Javascript</span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>View Online - <span><a href="https://usamagamea.github.io/restrurant/"
+                    target="_blank">Restaurant</a></span>
+              </p>
             </div>
           </div>
         </div>
@@ -263,48 +264,51 @@
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                Personal Portfolio. inspirational designs, illustrations, and graphic elements from the world's best
+                designers. Want more inspiration
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span></span></p>
               <p>Technologies - <span>Html, Css , Javascript</span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>View Online - <span><a href="https://usamagamea.github.io/neumorphism-portfolio/"
+                    target="_blank">Personal Neumorphism Portfolio</a></span></p>
             </div>
           </div>
         </div>
         <!-- portfolio item end -->
 
+
         <!-- portfolio item start -->
-        <div class="portfolio-item" data-category="front-end,bootstrap">
+        <div class="portfolio-item" data-category="angular">
           <div class="portfolio-item-thumbnail">
-            <img src="img/portfolio/7.jpg" alt="thumbnail">
+            <img src="img/portfolio/3.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">product landing page</h3>
+          <h3 class="portfolio-item-title">Construction Engineering Manual</h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                Construction
+                engineering manual website Planning, This
+                handbook deals with the methods of
+                planning the building site management
+                that is largely common
+
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span></span></p>
-              <p>Technologies - <span>Html, Css , Bootstrap 4</span></p>
-              <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>Technologies - <span>Angular+2, Metronic</span></p>
+              <p>Role - <span>angular</span></p>
+              <p>View Online - <span><a href="#" target="_blank">CEM</a></span></p>
             </div>
           </div>
         </div>
         <!-- portfolio item end -->
-
         <!-- portfolio item start -->
-        <div class="portfolio-item" data-category="front-end,bootstrap">
+        <div class="portfolio-item" data-category="angular,bootstrap">
           <div class="portfolio-item-thumbnail">
             <img src="img/portfolio/8.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
@@ -313,16 +317,16 @@
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                Based on movie DB API, creating a movie website using Angular,
+                animation NG, material NG, and prime NG Library.
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span></span></p>
               <p>Technologies - <span>Html, Scss , AngularTS </span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>View Online - <span><a href="https://github.com/usamagamea/ngMovies" target="_blank">Ng
+                    Movies</a></span></p>
             </div>
           </div>
         </div>
@@ -343,9 +347,16 @@
       <div class="row">
         <div class="contact-content">
           <div class="contact-text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit veritatis porro repudiandae esse quia totam
-              praesentium tempore. Animi molestias debitis tempora, illum impedit dolores sequi, eaque quis iste culpa
-              quas.</p>
+            <p>Enthusiastic front-end web
+              developer eager to learn
+              and showcase my skills in
+              writing clean code for front
+              end. I am always looking for
+              challenges so that I can
+              improve and give all I have
+              to make every thing
+              possible.
+            </p>
           </div>
           <div class="contact-info-item">
             <p>Email me on : <span class="mail">osamagamea44@gmail.com</span></p>
@@ -358,7 +369,7 @@
               <a href="https://www.instagram.com/usama_game3/" target="_blank"><i class="fab fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/usa-ma-b564a81a5/" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="https://github.com/usamagamea" target="_blank"><i class="fab fa-github"></i></a>
             </p>
           </div>
           <button type="button" class="btn toggle-contact-form-btn">send message</button>
@@ -421,7 +432,7 @@
           <div class="pp-footer-right hidden">
             <button type="button" title="next work" class="btn pp-next-btn"> <i class="fas fa-arrow-right"></i></button>
             <h3></h3>
-            <img src="img/portfolio/2.jpg" alt="next work thumbnail">
+            <img src="img/portfolio/2.png" alt="next work thumbnail">
           </div>
         </div>
       </div>
