--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <div class="about-content">
           <img src="img/profile-img.jpg" alt="profile-img">
           <h1>Hey , my name is <span>Usama Abu-Gamea</span> </h1>
-          <p>I'm a <span>frontend developer</span>in living Tanta-Egypt, I make web applications using <span>html</span>
+          <p>I'm a <span>frontend developer</span> in living Cairo-Egypt, I make web applications using
+            <span>html</span>
             , <span>css</span> , <span>typescript</span> and
             <span>angular</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
               page</a>. Want to talk about a project? You can get in touch with me.
@@ -195,7 +196,7 @@
               <p>Created - <span></span></p>
               <p>Technologies - <span>Html, SCSS , Bootstrap , Angular +2</span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">Rajhi
+              <p>View Online - <span><a href="https://rajhisteelweb.azurewebsites.net/#/login" target="_blank">Rajhi
                     Steel</a></span></p>
             </div>
           </div>
@@ -302,7 +303,8 @@
               <p>Created - <span></span></p>
               <p>Technologies - <span>Angular+2, Metronic</span></p>
               <p>Role - <span>angular</span></p>
-              <p>View Online - <span><a href="#" target="_blank">CEM</a></span></p>
+              <p>View Online - <span><a href="https://systemcmds.salonspace1.com/#/auth/login"
+                    target="_blank">CEM</a></span></p>
             </div>
           </div>
         </div>
