lower case updates

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         <div class="portfolio-filter">
           <button type="button" title="Show All Works" class="portfolio-filter-btn active"
             data-filter="all">all</button>
-          <button type="button" title="Filter by Front-End" class="portfolio-filter-btn" data-filter="front-end">Vanilla
+          <button type="button" title="Filter by Front-End" class="portfolio-filter-btn" data-filter="front-end">vanilla
             JS</button>
           <button type="button" title="Filter by angular" class="portfolio-filter-btn"
-            data-filter="angular">Angular</button>
+            data-filter="angular">angular</button>
           <button type="button" title="Filter by Bootstrap" class="portfolio-filter-btn "
             data-filter="bootstrap">bootstrap</button>
         </div>
@@ -169,7 +169,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>Adwat Team</span></p>
               <p>Technologies - <span>Angular +2</span> - <span>Metronic</span> </p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://www.go-care.com/#/auth/landing-page" target="_blank">Go
@@ -184,7 +184,7 @@
             <img src="img/portfolio/7.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">Rajhi Steel Portal</h3>
+          <h3 class="portfolio-item-title">rajhi steel portal</h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
@@ -193,7 +193,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>Rajhi Team</span></p>
               <p>Technologies - <span>Html, SCSS , Bootstrap , Angular +2</span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://rajhisteelweb.azurewebsites.net/#/login" target="_blank">Rajhi
@@ -210,7 +210,7 @@
             <img src="img/portfolio/4.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">RaJhi Steel Customer Portal </h3>
+          <h3 class="portfolio-item-title">raJhi steel customer portal </h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
@@ -219,7 +219,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>Rajhi Team</span></p>
               <p>Technologies - <span>Html, SCSS , Bootstrap , Angular , Typescript </span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://rajhicustomer.azurewebsites.net/" target="_blank">Customer
@@ -243,7 +243,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>By Me</span></p>
               <p>Technologies - <span>Html, Css , Javascript</span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://usamagamea.github.io/restrurant/"
@@ -270,7 +270,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>By Me</span></p>
               <p>Technologies - <span>Html, Css , Javascript</span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://usamagamea.github.io/neumorphism-portfolio/"
@@ -287,7 +287,7 @@
             <img src="img/portfolio/3.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">Construction Engineering Manual</h3>
+          <h3 class="portfolio-item-title">construction engineering manual</h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
@@ -300,7 +300,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>AdwaT Team</span></p>
               <p>Technologies - <span>Angular+2, Metronic</span></p>
               <p>Role - <span>angular</span></p>
               <p>View Online - <span><a href="https://systemcmds.salonspace1.com/#/auth/login"
@@ -324,7 +324,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
+              <p>Created - <span>By Me</span></p>
               <p>Technologies - <span>Html, Scss , AngularTS </span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://github.com/usamagamea/ngMovies" target="_blank">Ng
