--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row min-vh-100">
         <div class="about-content">
           <img src="img/profile-img.jpg" alt="profile-img">
-          <h1>Hey , my name is <span>Usama Abu-Gamea</span> </h1>
+          <h1>Hey , my name is <span>Usama Alaa Gamea</span> </h1>
           <p>I'm a <span>frontend developer</span> in living Cairo-Egypt, I make web applications using
             <span>html</span>
             , <span>css</span> , <span>typescript</span> and
