--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span>AdwaT Team</span></p>
+              <p>Created - <span>Adwat Team</span></p>
               <p>Technologies - <span>Angular+2, Metronic</span></p>
               <p>Role - <span>angular</span></p>
               <p>View Online - <span><a href="https://systemcmds.salonspace1.com/#/auth/login"
