editing social links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row min-vh-100">
         <div class="about-content">
-          <img src="img/profile-img.jpg" alt="profile-img">
+          <img src="img/profile2-img.jpg" alt="profile-img">
           <h1>Hey , my name is <span>Usama Alaa Gamea</span> </h1>
           <p>I'm a <span>frontend developer</span> in living Cairo-Egypt, I make web applications using
             <span>html</span>
@@ -368,8 +368,8 @@
               <span>find me on : </span>
               <a href="https://www.facebook.com/Usma3laa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
               <a href="https://twitter.com/GOAT_GAME3" target="_blank"><i class="fab fa-twitter"></i></a>
-              <a href="https://www.instagram.com/usama_game3/" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/usa-ma-b564a81a5/" target="_blank"><i
+              <!-- <a href="https://www.instagram.com/usama_game3/" target="_blank"><i class="fab fa-instagram"></i></a> -->
+              <a href="https://www.linkedin.com/in/usama-abu-gamea-b564a81a5/" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/usamagamea" target="_blank"><i class="fab fa-github"></i></a>
             </p>
