--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
     <div class="container">
       <div class="row min-vh-100">
         <div class="about-content">
-          <img src="img/profile2-img.jpg" alt="profile-img">
+          <img src="img/profile.jpg" alt="profile-img">
           <h1>Hey , my name is <span>Usama Alaa Gamea</span> </h1>
-          <p>I'm a <span>frontend developer</span> in living Cairo-Egypt, I make web applications using
-            <span>html</span>
-            , <span>css</span> , <span>typescript</span> and
-            <span>angular</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
+          <p>I'm a <span>frontend engineer</span>, I developed web applications using
+            <span>html5</span>
+            , <span>css3</span> , <span>typescript</span> and
+            <span>angular+2</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
               page</a>. Want to talk about a project? You can get in touch with me.
             <a href="#contact" class="link-item">here</a> </p>
           <h2>resuming skills </h2>
