update with two additional  projects

--- a/index.html
+++ b/index.html
@@ -130,28 +130,27 @@
       </div>
       <div class="row portfolio-items">
         <!-- portfolio item start -->
-        <!-- <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item" data-category="front-end">
           <div class="portfolio-item-thumbnail">
-            <img src="img/portfolio/1.jpg" alt="thumbnail">
+            <img src="img/portfolio/9.png" alt="thumbnail">
             <button type="button" class="btn more-info-btn">more info</button>
           </div>
-          <h3 class="portfolio-item-title">education course website</h3>
+          <h3 class="portfolio-item-title">quiz education website</h3>
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eos dignissimos fugit pariatur nisi
-                eaque, sit quia quo magni odio. Dolorum doloremque repudiandae qui! Ipsa facilis omnis quos veritatis
-                ullam!
+                This is a quiz website that is developed using vanilla javascript.
               </p>
             </div>
             <div class="general-info">
-              <p>Created - <span></span></p>
-              <p>Technologies - <span>Html, Css</span></p>
+              <p>Created - <span>By Me</span></p>
+              <p>Technologies - <span>Html, Css, Javascript</span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="#" target="_blank">www@domain.com</a></span></p>
+              <p>View Online - <span><a href="https://usamagamea.github.io/quiz-app.githup.io/index.html"
+                    target="_blank">Quiz App</a></span></p>
             </div>
           </div>
-        </div> -->
+        </div>
         <!-- portfolio item end -->
 
         <!-- portfolio item start -->
@@ -329,6 +328,49 @@
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://github.com/usamagamea/ngMovies" target="_blank">Ng
                     Movies</a></span></p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="angular,bootstrap">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/10.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">dashboard panel website</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                three model in lazy load mode and authentication guard using angular and bootstrap :
+                <br>
+                1- Security Model (Registration Page - Login Page).
+                <br>
+                2- Portal Model (Dashboard page - Students list - Student view - Student Profile ).
+                <br>
+                3- Shared Model (main menu and main container to display Portal Model pages ).
+                <br>
+                - all data based on service provided data on fly named (data.service.ts in shared model).
+                <br>
+                - create static object for three students to display by default in Students list.
+                <br>
+                - each page take title display in page and in browser tab.
+                <br>
+                - each input text accept english letters only without regular expression.
+                <br>
+                - add validation on email input format using regular expression.
+                <br>
+                - after student login , displaying in top part of dashboard page first 5 char of first name and 1 char
+                of last name uppercase and dot .
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>By Me</span></p>
+              <p>Technologies - <span>Html, css , bootstrap ,AngularTS </span></p>
+              <p>Role - <span>Front-End</span></p>
+              <p>View Online - <span><a href="https://usamagamea.github.io/dashboard/lazy/login"
+                    target="_blank">Dashboard
+                  </a></span></p>
             </div>
           </div>
         </div>
