--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row min-vh-100">
         <div class="about-content">
-          <img src="img/profile.jpg" alt="profile-img">
+          <img src="img/logo2.png" alt="profile-img">
           <h1>Hey , my name is <span>Usama Alaa Gamea</span> </h1>
           <p>I'm a <span>frontend engineer</span>, I developed web applications using
             <span>html5</span>
