recognized folders images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Portfolio Website</title>
-  <link href="img/logo1.png" rel="icon">
+  <link href="img/logo/logo1.png" rel="icon">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/font-awesome.css">
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row min-vh-100">
         <div class="about-content">
-          <img src="img/logo2.png" alt="profile-img">
+          <img src="img/logo/logo2.png" alt="profile-img">
           <h1>Hey , my name is <span>Usama Alaa Gamea</span> </h1>
           <p>I'm a <span>frontend engineer</span>, I developed web applications using
             <span>html5</span>
