--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
       <div class="row min-vh-100">
         <div class="about-content">
           <img src="img/logo/logo2.png" alt="profile-img">
-          <h1>Hey , my name is <span>Usama Alaa Gamea</span> </h1>
+          <h1>Hello , my name is <span>Usama Alaa Gamea</span> </h1>
           <p>I'm a <span>frontend engineer</span>, I developed web applications using
             <span>html5</span>
             , <span>css3</span> , <span>typescript</span> and
-            <span>angular+2</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
+            <span>angular+8</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
               page</a>. Want to talk about a project? You can get in touch with me.
             <a href="#contact" class="link-item">here</a> </p>
           <h2>resuming skills </h2>
