--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             </div>
             <div class="general-info">
               <p>Created - <span>Adwat Team</span></p>
-              <p>Technologies - <span>Angular +2</span> - <span>Metronic</span> </p>
+              <p>Technologies - <span>scss, Angular 12 ,ngx libraries toaster localizations , bootstrap </span> -
+                <span>Metronic</span> <span>TFS source Control</span> </p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://www.go-care.com/#/auth/landing-page" target="_blank">Go
                     Care</a></span></p>
@@ -193,7 +194,8 @@
             </div>
             <div class="general-info">
               <p>Created - <span>Rajhi Team</span></p>
-              <p>Technologies - <span>Html, SCSS , Bootstrap , Angular +2</span></p>
+              <p>Technologies - <span>Html, SCSS , Bootstrap , Angular 11 , ngx libraries toaster localizations </span>
+                - <span>Git & Azure devops source control</span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://rajhisteelweb.azurewebsites.net/#/login" target="_blank">Rajhi
                     Steel</a></span></p>
@@ -219,7 +221,8 @@
             </div>
             <div class="general-info">
               <p>Created - <span>Rajhi Team</span></p>
-              <p>Technologies - <span>Html, SCSS , Bootstrap , Angular , Typescript </span></p>
+              <p>Technologies - <span>Html, SCSS , Bootstrap , Angular 12, Typescript , ngx libraries toaster
+                  localizations </span> - <span>Git & Azure devops source control</span> </p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://rajhicustomer.azurewebsites.net/" target="_blank">Customer
                     Portal</a></span></p>
@@ -243,7 +246,7 @@
             </div>
             <div class="general-info">
               <p>Created - <span>By Me</span></p>
-              <p>Technologies - <span>Html, Css , Javascript</span></p>
+              <p>Technologies - <span>Html, Css , Javascript</span> - <span> Git & Githup source control</span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://usamagamea.github.io/restrurant/"
                     target="_blank">Restaurant</a></span>
@@ -270,7 +273,7 @@
             </div>
             <div class="general-info">
               <p>Created - <span>By Me</span></p>
-              <p>Technologies - <span>Html, Css , Javascript</span></p>
+              <p>Technologies - <span>Html, Css , Javascript</span> - <span> Git & Githup source control</span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://usamagamea.github.io/neumorphism-portfolio/"
                     target="_blank">Personal Neumorphism Portfolio</a></span></p>
@@ -300,7 +303,8 @@
             </div>
             <div class="general-info">
               <p>Created - <span>Adwat Team</span></p>
-              <p>Technologies - <span>Angular+2, Metronic</span></p>
+              <p>Technologies - <span> scss, Angular12 ,ngx libraries toaster localizations , bootstrap </span> -
+                <span>Metronic</span> <span>TFS source Control</span></p>
               <p>Role - <span>angular</span></p>
               <p>View Online - <span><a href="https://systemcmds.salonspace1.com/#/auth/login"
                     target="_blank">CEM</a></span></p>
@@ -366,7 +370,8 @@
             </div>
             <div class="general-info">
               <p>Created - <span>By Me</span></p>
-              <p>Technologies - <span>Html, css , bootstrap ,AngularTS </span></p>
+              <p>Technologies - <span>Html, css , bootstrap ,AngularTS </span> - <span>Git & Githup source control
+                </span></p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://usamagamea.github.io/dashboard/lazy/login"
                     target="_blank">Dashboard
