--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Portfolio Website</title>
+  <title>Portfolio</title>
   <link href="img/logo/logo1.png" rel="icon">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -428,19 +428,19 @@
           <div class="contact-form-inner">
             <div class="contact-form-container">
               <button type="button" class="close-btn toggle-contact-form-btn"></button>
-              <form>
+              <form id="form" onsubmit="sendEmail()">
                 <div class="row">
                   <div class="input-group">
-                    <input type="text" placeholder="Your Name" class="input-control">
+                    <input type="text" id="name" placeholder="Your Name" class="input-control">
                   </div>
                   <div class="input-group">
-                    <input type="email" placeholder="Your Email" class="input-control">
+                    <input type="email" id="email" placeholder="Your Email" class="input-control">
                   </div>
                   <div class="input-group">
-                    <input type="text" placeholder="Subject" class="input-control">
+                    <input type="text" placeholder="Subject" id="subject" class="input-control">
                   </div>
                   <div class="input-group">
-                    <textarea placeholder="Message" class="input-control"></textarea>
+                    <textarea placeholder="Message" id="message" class="input-control"></textarea>
                   </div>
                   <div class="input-group">
                     <button type="submit" class="btn btn-sub">Send</button>
@@ -489,6 +489,7 @@
   </div>
   <!-- portfolio item details end -->
   <script src="js/script.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
 </html>
