--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           <div class="contact-form-inner">
             <div class="contact-form-container">
               <button type="button" onclick="resetForm()" class="close-btn toggle-contact-form-btn"></button>
-              <form id="form" autocomplete="off" onsubmit="sendEmail()">
+              <form id="form" autocomplete="off">
                 <div class="row">
                   <div class="input-group">
                     <input type="text" id="name" placeholder="Your Name" class="input-control">
@@ -443,7 +443,7 @@
                     <textarea placeholder="Message" id="message" class="input-control"></textarea>
                   </div>
                   <div class="input-group">
-                    <button type="submit" class="btn btn-sub">Send</button>
+                    <button type="submit" onclick="sendEmail()" class="btn btn-sub">Send</button>
                   </div>
                 </div>
               </form>
