reference to ng monies

--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
             <div class="description">
               <p>
                 Based on movie DB API, creating a movie website using Angular,
-                animation NG, material NG, and prime NG Library.
+                animation NG, material NG, and prime NG libraries.
               </p>
             </div>
             <div class="general-info">
               <p>Created - <span>By Me</span></p>
-              <p>Technologies - <span>Html, Scss , AngularTS </span></p>
+              <p>Technologies - <span>Html, Scss , NgPrime , Angular Material , Angular 14 </span></p>
               <p>Role - <span>Front-End</span></p>
-              <p>View Online - <span><a href="https://github.com/usamagamea/ngMovies" target="_blank">Ng
+              <p>View Online - <span><a href="https://ngmovies.bluebits.dev/" target="_blank">Ng
                     Movies</a></span></p>
             </div>
           </div>
