--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="nav-inner">
             <ul>
               <li><a href="#about" class="nav-item link-item">about</a></li>
-              <li><a href="#portfolio" class="nav-item link-item">portfolio</a></li>
+              <li><a href="#portfolio" class="nav-item link-item">projects</a></li>
               <li><a href="#contact" class="nav-item link-item">contact</a></li>
             </ul>
           </div>
